--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
         ]
       }
     ],
+    "no-param-reassign": "off",
     "no-underscore-dangle": "off",
     "react/forbid-prop-types": "off",
     "react/react-in-jsx-scope": "off",
